# pyImguiOs

./: README.md  imgui.ini  pyproject.toml
.github/: pull_request_template.md
docs/: conf.py  index.rst
pyImguiOs/: core.py  imgui.ini  main.py  menuWidgets.py  plugins.py
pyImguiOs/apps/: alerts.py  batteryMonitor.py  misc.py  onScreenKeyboard.py  systemMonitor.py  vt100.py
