[tool.poetry]
name = "pyImguiOs"
version = "0.1.0"
description = ""
authors = ["Alex Davies <traverse.da@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pyglet = "^1.5.24"
imgui = {extras = ["pyglet"], version = "^1.4.1"}
blinker = "^1.4"
psutil = "^5.9.0"
pyte = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
